<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/verify_otp_methods"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/verifyOtpBySender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp_by_sender" />

    <Button
        android:id="@+id/verifyOtpMatchString"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_otp_if_matches_string" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/get_sms_messages"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/allMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_all_messages" />

    <Button
        android:id="@+id/last3Messages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_last_3_messages" />

    <Button
        android:id="@+id/getAllBySender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_messages_by_sender" />

    <Button
        android:id="@+id/getAllContain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_messages_that_contains_string" />


</LinearLayout>